# super-master-mind

./: .gitignore  .headache.dirs  .ocamlformat  CHANGELOG.md  CHANGES.md  CODE_OF_CONDUCT.md  COPYING.HEADER  LICENSE  NOTICE.md  README.md  dune-project  dune-workspace.5.4  dunolint  headache.sh  super-master-mind-dev.opam  super-master-mind-tests.opam  super-master-mind-tests.opam.template  super-master-mind.opam  super-master-mind.opam.template
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy-odoc.yml  dune-pkg-more-ci.yml  more-ci.yml
doc/: other-rules.md
lib/super_master_mind/src/: Sites.mli  code.ml  code.mli  codes.ml  codes.mli  color.ml  color.mli  color_permutation.ml  color_permutation.mli  cue.ml  cue.mli  dune  example.ml  example.mli  game_dimensions.ml  game_dimensions.mli  guess.ml  guess.mli  import.ml  import.mli  kheap.ml  kheap.mli  maker.ml  opening_book.ml  opening_book.mli  solver.ml  solver.mli  super_master_mind.ml  super_master_mind.mli  task_pool.ml  task_pool.mli
lib/super_master_mind/src/import/: dune  super_master_mind_import.ml  super_master_mind_import.mli
lib/super_master_mind/test/: dune  test__code.ml  test__codes.ml  test__color.ml  test__color_permutation.ml  test__cue.ml  test__example.ml  test__game_dimensions.ml  test__guess.ml  test__kheap.ml  test__mins.ml  test__opening_book.ml
odoc/: index.html
odoc/super-master-mind/: db.js  index.html
odoc/super-master-mind-tests/: db.js  index.html
odoc/super-master-mind-tests/Super_master_mind_test/: index.html
odoc/super-master-mind/Super_master_mind/: index.html
odoc/super-master-mind/Super_master_mind/Code/: index.html
odoc/super-master-mind/Super_master_mind/Code/Hum/: index.html
odoc/super-master-mind/Super_master_mind/Codes/: index.html
odoc/super-master-mind/Super_master_mind/Color/: index.html
odoc/super-master-mind/Super_master_mind/Color/Hum/: index.html
odoc/super-master-mind/Super_master_mind/Color_permutation/: index.html
odoc/super-master-mind/Super_master_mind/Color_permutation/Private/: index.html
odoc/super-master-mind/Super_master_mind/Cue/: index.html
odoc/super-master-mind/Super_master_mind/Cue/Hum/: index.html
odoc/super-master-mind/Super_master_mind/Example/: index.html
odoc/super-master-mind/Super_master_mind/Game_dimensions/: index.html
odoc/super-master-mind/Super_master_mind/Guess/: index.html
odoc/super-master-mind/Super_master_mind/Guess/By_cue/: index.html
odoc/super-master-mind/Super_master_mind/Guess/Next_best_guesses/: index.html
odoc/super-master-mind/Super_master_mind/Guess/T/: index.html
odoc/super-master-mind/Super_master_mind/Guess/Verify_error/: index.html
odoc/super-master-mind/Super_master_mind/Kheap/: index.html
odoc/super-master-mind/Super_master_mind/Opening_book/: index.html
odoc/super-master-mind/Super_master_mind/Permutation/: index.html
odoc/super-master-mind/Super_master_mind/Permutation/Hum/: index.html
odoc/super-master-mind/Super_master_mind/Permutations/: index.html
odoc/super-master-mind/Super_master_mind/Task_pool/: index.html
odoc/super-master-mind/Super_master_mind/Task_pool/Config/: index.html
odoc/super-master-mind/Super_master_mind_import/: index.html
odoc/super-master-mind/Super_master_mind_import/Float/: index.html
opening-book/: Makefile  dune  opening-book.expected
src/: Sites.mli  code.ml  code.mli  codes.ml  codes.mli  color.ml  color.mli  color_permutation.ml  color_permutation.mli  cue.ml  cue.mli  dune  example.ml  example.mli  game_dimensions.ml  guess.ml  guess.mli  import.ml  import.mli  kheap.ml  kheap.mli  maker.ml  maker.mli  opening.ml  opening.mli  opening_book.ml  opening_book.mli  permutation.ml  permutation.mli  permutations.ml  permutations.mli  solver.ml  solver.mli  super_master_mind.ml  super_master_mind.mli  task_pool.ml  task_pool.mli
src/myers/: dune  myers.ml  myers.mli
src/opening-book/: dune  opening-book.expected  opening-book.sexp.expected
src/stdlib/: array0.ml  array0.mli  code_error.ml  code_error.mli  command0.ml  command0.mli  dune  dyn0.ml  dyn0.mli  float0.ml  float0.mli  fun0.ml  fun0.mli  hashtbl0.ml  hashtbl0.mli  in_channel0.ml  in_channel0.mli  int0.ml  int0.mli  json.ml  json.mli  list0.ml  list0.mli  myers0.ml  myers0.mli  nonempty_list0.ml  nonempty_list0.mli  option0.ml  option0.mli  ordering0.ml  ordering0.mli  out_channel0.ml  out_channel0.mli  poly0.ml  poly0.mli  result0.ml  result0.mli  source_code_position.ml  source_code_position.mli  stdlib0.ml  (+5 more)
test/: dune  example.t  maker.t  opening-book.t  solver.t  test__code.ml  test__codes.ml  test__color.ml  test__color_permutation.ml  test__cue.ml  test__example.ml  test__guess.ml  test__hello.ml  test__kheap.ml  test__mins.ml  test__opening_book.ml  test__permutation.ml  test__permutations.ml
test/cram/: example.t  maker.t  opening-book.t  solver.t
test/expect/: dune  test__code.ml  test__codes.ml  test__color.ml  test__color_permutation.ml  test__cue.ml  test__example.ml  test__game_dimensions.ml  test__guess.ml  test__kheap.ml  test__mins.ml  test__opening_book.ml
test/myers/: dune  test_myers.ml
test/stdlib/: dune  test__array.ml  test__expect.ml  test__expect.mli  test__json.ml  test__list.ml  test__nonempty_list.ml  test__nonempty_list.mli  test__ordering.ml  test__ordering.mli
