opam-version: "2.0"
synopsis: "A solver for the super master mind game"
description: "A solver for the super master mind game"
maintainer: "Mathieu Barbin"
authors: "Mathieu Barbin"
license: "MIT"
homepage: "https://github.com/mbarbin/super-master-mind"
doc: "https://mbarbin.github.io/super-master-mind/odoc/super-master-mind/index.html"
bug-reports: "https://github.com/mbarbin/super-master-mind/issues"
depends: [
  "ocaml" {>= "4.09.0"}
  "dune" {>= "2.0.0"}
  "ANSITerminal" {>= "0.8.3"}
  "core" {>= "v0.15~preview.126.09+332"}
  "core_kernel" {>= "v0.15~preview.126.09+332"}
  "core_unix" {>= "v0.15~preview.126.09+332"}
  "ocaml-embed-file"
  "ppx_jane" {>= "v0.15~preview.126.09+332"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mbarbin/super-master-mind.git"
