(library
 (name super_master_mind)
 (public_name super-master-mind)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Cmdlang
  -open
  Super_master_mind_stdlib)
 (libraries
  base
  cmdlang
  domainslib
  dune-site
  nonempty-list
  patdiff.expect_test_patdiff
  progress
  super_master_mind_stdlib)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps -unused-code-warnings=force ppx_compare)))

(generate_sites_module
 (module sites)
 (sites super-master-mind))
