(library
 (name super_master_mind)
 (public_name super-master-mind)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Cmdlang
  -open
  Super_master_mind_stdlib)
 (libraries
  cmdlang
  domainslib
  dune-site
  nonempty-list
  progress
  super_master_mind_stdlib
  windtrap.myers)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))

(generate_sites_module
 (module sites)
 (sites super-master-mind))
