(library
 (name super_master_mind)
 (public_name super-master-mind)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Super_master_mind_stdlib)
 (libraries domainslib dune-site progress super_master_mind_stdlib)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))

(generate_sites_module
 (module sites)
 (sites super-master-mind))
