(library
 (name super_master_mind_stdlib_test)
 (package super-master-mind-tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Super_master_mind_stdlib)
 (libraries super_master_mind_stdlib)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_windtrap)))
