(library
 (name super_master_mind)
 (public_name super-master-mind)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdio
  -open
  Super_master_mind_import)
 (libraries
  base
  core.command
  core_kernel.nonempty_list
  domainslib
  parsexp
  progress
  sexp_diff
  stdio
  super_master_mind_import)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))

(rule
 (targets embedded_files.ml embedded_files.mli)
 (deps %{bin:ocaml-embed-file} ../../../opening-book/opening-book.expected)
 (action
  (bash "%{deps} -output embedded_files")))
