(library
 (name super_master_mind)
 (public_name super-master-mind)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdio
  -open
  Super_master_mind_import)
 (libraries
  base
  core.command
  domainslib
  nonempty-list
  parsexp
  patdiff
  patdiff.expect_test_patdiff
  progress
  stdio
  super_master_mind_import)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))

(rule
 (targets embedded_files.ml embedded_files.mli)
 (deps %{bin:ocaml-embed-file} ../../../opening-book/opening-book.expected)
 (action
  (bash "%{deps} -output embedded_files")))
