(library
 (name super_master_mind)
 (public_name super-master-mind)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdio
  -open
  Cmdlang)
 (libraries
  base
  domainslib
  nonempty-list
  cmdlang
  parsexp
  patdiff
  patdiff.expect_test_patdiff
  progress
  stdio)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))

(rule
 (targets embedded_files.ml embedded_files.mli)
 (deps ../../../opening-book/opening-book.expected)
 (action
  (run %{bin:ocaml-embed-file} %{deps} -output embedded_files)))
