(library
 (name super_master_mind_test)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdio
  -open
  Expect_test_helpers_base
  -open
  Super_master_mind)
 (libraries
  base
  expect_test_helpers_core.expect_test_helpers_base
  nonempty-list
  stdio
  super_master_mind)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))
