(library
 (name super_master_mind_test)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdio
  -open
  Expect_test_helpers_base
  -open
  Super_master_mind)
 (libraries
  base
  expect_test_helpers_core.expect_test_helpers_base
  nonempty-list
  stdio
  super_master_mind)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value
   ppx_js_style
   -check-doc-comments)))
